Most things are working, still missing an additional type plus rest endpoints.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-NODE_ENV=string
+NODE_ENV=[dev/prod]
 PORT=number
+USE_POSTGRES=[0/1]
 SERVICE_ACCOUNT=base64
+PGHOST=string
+PGPORT=5432
+PGDATABASE=string
+PGUSER=string
+PGPASSWORD=string
