--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "watch": "nodemon --watch \"./**/*.{ts,graphql}\" --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\" src/index.ts",
-    "dev": "tsc-watch --onSuccess \"npm run watch\""
+    "dev": "tsc-watch --onSuccess \"npm run watch\"",
+    "script": "nodemon src/test.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,8 @@
     "apollo-server-express": "^3.6.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
@@ -27,6 +29,7 @@
     "@babel/preset-env": "^7.16.11",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.15",
+    "@types/pg": "^8.6.4",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.8.0",
