Add rate limiting

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NODE_ENV=[dev/prod]
+NODE_ENV=[local/dev/prod]
 PORT=number
 USE_POSTGRES=[0/1]
 SERVICE_ACCOUNT=base64
@@ -9,3 +9,5 @@ PGUSER=string
 PGPASSWORD=string
 JWT_SECRET=string
 JWT_MAX_AGE_SECONDS=number
+RATE_LIMIT_MAX_REQUEST_COUNT=number
+RATE_LIMIT_TIME_WINDOW_SECONDS=number
